# krustlet-wagi-provider

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yml
crates/wagi-provider/: Cargo.toml
crates/wagi-provider/src/: lib.rs  pod.rs  runtime.rs
crates/wagi-provider/src/pod/: initializing.rs  running.rs  starting.rs
demos/wagi/: k8s.yaml
scripts/: bootstrap.ps1  bootstrap.sh
src/: krustlet-wagi.rs
