[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
default-run = "krustlet-wagi"
description = "A Krustlet Provider implementation in Rust for running WAGI modules in Kubernetes"
edition = "2018"
exclude = ["docs/*", "demos/*", ".github/*", ".gitignore"]
keywords = ["wasm", "wasi", "wagi", "webassembly", "kubernetes"]
license = "Apache-2.0"
name = "krustlet-wagi-provider"
readme = "README.md"
repository = "https://github.com/deislabs/krustlet-wagi-provider"
version = "0.1.0"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["native-tls"]
native-tls = [
  "kube/native-tls",
  "krator/kube-native-tls",
  "kubelet/kube-native-tls",
  "wagi-provider/native-tls",
  "oci-distribution/native-tls",
]
rustls-tls = [
  "kube/rustls-tls",
  "krator/rustls-tls",
  "kubelet/rustls-tls",
  "wagi-provider/rustls-tls",
  "oci-distribution/rustls-tls",
]

[dependencies]
anyhow = "1.0"
dirs = {package = "dirs-next", version = "2.0.0"}
futures = "0.3"
hostname = "0.3"
k8s-openapi = {version = "0.12", default-features = false, features = ["v1_21"]}
krator = {version = "0.4", default-features = false}
kube = {version = "0.58", default-features = false}
kubelet = {version = "1.0.0-alpha.1", default-features = false, features = ["cli"]}
oci-distribution = {version = "0.7", default-features = false}
regex = "1.3"
serde = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "time"]}
tracing-subscriber = "0.2"
wagi-provider = {path = "./crates/wagi-provider", version = "0.1.0", default-features = false}
notify = "=5.0.0-pre.10"

[workspace]
members = [
  "crates/wagi-provider",
]

[[bin]]
name = "krustlet-wagi"
path = "src/krustlet-wagi.rs"
