[package]
authors = ["Matt Butcher <matt.butcher@microsoft.com>", "Matthew Fisher <matt.fisher@microsoft.com>", "Radu Matei <radu.matei@microsoft.com>", "Taylor Thomas <taylor.thomas@microsoft.com>", "Brian Ketelsen <Brian.Ketelsen@microsoft.com>", "Brian Hardock <Brian.Hardock@microsoft.com>", "Ryan Levick <rylevick@microsoft.com>", "Kevin Flansburg <kevin.flansburg@gmail.com>"]
edition = "2018"
name = "wagi-provider"
publish = false
version = "0.1.0"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls", "kubelet/kube-native-tls", "krator/kube-native-tls"]
rustls-tls = ["kube/rustls-tls", "kubelet/rustls-tls", "krator/rustls-tls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = "0.3"
cap-std = "0.13"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.1"
wasmtime = "0.30.0"
toml = "0.5"
indexmap = { version = "^1.6.2", features = ["serde"] }
wagi = { git = "https://github.com/deislabs/wagi", version = "0.4.0", rev = "9abecade" }
tokio = { version = "1.0", features = ["fs", "macros", "io-util", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
krator = { version = "0.4", default-features = false }
kube = { version = "0.58", default-features = false }
kubelet = { git = "https://github.com/krustlet/krustlet", tag = "v1.0.0-alpha.1", version = "1.0.0-alpha.1", features = ["derive"], default-features = false }
tracing = { version = "0.1", features = ["log"] }
hyper = {version = "0.14", features = ["full"]}